force-app/main/default/objects/Study_Intake__c/Study_Intake__c.object-meta.xml
<CustomObject>
    <description>Academic intake for a study program.</description>
    <label>Study Intake</label>
    <nameField>
        <label>Study Intake Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Intakes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>