force-app/main/default/objects/Study_Intake__c/fields/Approved_Applications__c.field-meta.xml
<CustomField>
    <fullName>Approved_Applications__c</fullName>
    <description>Number of Approved Applications.</description>
    <inlineHelpText>Number of Approved Applications.</inlineHelpText>
    <label>Approved Applications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>