force-app/main/default/objects/Study_Intake__c/fields/Booked_Places__c.field-meta.xml
<CustomField>
    <fullName>Booked_Places__c</fullName>
    <description>Number of students applied for the study intake.</description>
    <inlineHelpText>Number of students applied for the study intake.</inlineHelpText>
    <label>Booked Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>