force-app/main/default/objects/Study_Intake__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>The maximum number of students for this study intake.</description>
    <inlineHelpText>The maximum number of students for this study intake.</inlineHelpText>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>