force-app/main/default/objects/Study_Intake__c/fields/Cohort_ID__c.field-meta.xml
<CustomField>
    <fullName>Cohort_ID__c</fullName>
    <inlineHelpText>Cohort group ID for the students.</inlineHelpText>
    <label>Cohort ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>