force-app/main/default/objects/Study_Intake__c/fields/Default_Study_Pathway__c.field-meta.xml
<CustomField>
    <fullName>Default_Study_Pathway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Study Pathway</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Study_Program__c</field>
            <operation>equals</operation>
            <valueField>Study_Pathway__c.Study_Plan__r.Study_Program__c</valueField>
        </filterItems>
        <infoMessage>Please select a study pathway that belongs to the same study program.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Study_Pathway__c</referenceTo>
    <relationshipLabel>Study Intakes</relationshipLabel>
    <relationshipName>Study_Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>