force-app/main/default/objects/Study_Intake__c/fields/Registration_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Close_Date__c</fullName>
    <label>Registration Close Date</label>
    <type>Date</type>
</CustomField>