force-app/main/default/objects/Study_Intake__c/fields/Waitlisted_Places__c.field-meta.xml
<CustomField>
    <fullName>Waitlisted_Places__c</fullName>
    <label>Waitlisted Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>