force-app/main/default/objects/Study_Intake__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Study_Program__c</columns>
    <columns>Academic_Term__c</columns>
    <columns>Campus__c</columns>
    <columns>Registration_Open_Date__c</columns>
    <columns>Registration_Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>