force-app/main/default/objects/Study_Intake__c/listViews/Next_Years_Study_Intakes.listView-meta.xml
<ListView>
    <fullName>Next_Years_Study_Intakes</fullName>
    <columns>NAME</columns>
    <columns>Study_Program__c</columns>
    <columns>Academic_Term__c</columns>
    <columns>Campus__c</columns>
    <columns>Registration_Open_Date__c</columns>
    <columns>Registration_Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Registration_Open_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_YEAR</value>
    </filters>
    <label>Next Year&apos;s Study Intakes</label>
</ListView>